force-app/main/default/objects/Calendar_Filter_View__c/Calendar_Filter_View__c.object-meta.xml
<CustomObject>
    <label>Calendar Filter View</label>
    <nameField>
        <label>Calendar Filter View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Filter Views</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>