force-app/main/default/objects/Calendar_Filter_View__c/fields/booleanFilter__c.field-meta.xml
<CustomField>
    <fullName>booleanFilter__c</fullName>
    <label>booleanFilter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>