force-app/main/default/objects/Calendar_Filter_View__c/fields/Calendar_Type__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Calendar Type</label>
    <referenceTo>Calendar_Type__c</referenceTo>
    <relationshipLabel>Calendar Filter Views</relationshipLabel>
    <relationshipName>Calendar_Filter_Views</relationshipName>
    <type>Lookup</type>
</CustomField>