force-app/main/default/objects/Calendar_Filter_View__c/fields/filterScope__c.field-meta.xml
<CustomField>
    <fullName>filterScope__c</fullName>
    <label>filterScope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Records</fullName>
            </value>
            <value>
                <fullName>My Records</fullName>
            </value>
            <value>
                <fullName>My Team&apos;s Records</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>