force-app/main/default/objects/Calendar_Filter_View__c/fields/ShareTo__c.field-meta.xml
<CustomField>
    <fullName>ShareTo__c</fullName>
    <label>ShareTo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Me</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>