force-app/main/default/objects/Calendar_Filter_View__c/fields/View_Type__c.field-meta.xml
<CustomField>
    <fullName>View_Type__c</fullName>
    <label>View Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
                <default>true</default>
                <label>Custom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>